# trail-aiac

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.claude/agents/: install-helper.md
.claude/commands/: trail-install-helper.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
ansible/: README.md  ansible.cfg  backup-cron.yml  backup.yml  inventory.yml.example  plane.yml
ansible/group_vars/: all.yml  plane_hosts.yml
ansible/host_vars/: plane.yml.example
ansible/vault/: secrets.example.yml
claude/: config.yaml.example  credentials.yaml.example  settings.json
claude/agents/: backend-developer.md  business-analyst.md  edge-case-hunter.md  release-manager.md  requirements-engineer.md  security-reviewer.md  software-architect.md  technical-writer.md  test-manager.md  ui-developer.md  ui-test-writer.md  venture-advisor.md
claude/commands/: ba.md  bd.md  kickoff.md  re.md  rm.md  sa.md  sr.md  tm.md  tw.md  ud.md  va.md
claude/context.example/: api.md  architecture.md  coding.md  control-manifest.md  documentation.md  glossary.md  product.md  release.md  roadmap.md  security.md  stack.md  testing.md  ui.md
claude/mcp/: .env.test.example  README.md  pyproject.toml
claude/mcp/scripts/: diagnose_plane.py
claude/mcp/src/plane_extras_mcp/: __init__.py  plane.py  server.py
claude/mcp/tests/: test_integration.py  test_smoke.py
doc/: BACKUP.md  COMPARISON.md  INSTALLATION.md  MCP.md  PERSONAS.md  PLANE_API.md  PROVISIONING.md  WORKFLOW.md
(+47 files in other folders)
