[project]
name = "plane-extras-mcp"
version = "0.1.0"
description = "Multi-tenant MCP server for Plane: every persona's API token in one stdio process, tools name-prefixed by persona."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Trail contributors" },
]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "truststore>=0.10",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
]

[project.scripts]
plane-extras-mcp = "plane_extras_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plane_extras_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
